--- a/url-redirect-nest/package.json
+++ b/url-redirect-nest/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.4.20",
     "@nestjs/platform-express": "^10.4.20",
     "@sixaphone/nestjs-drizzle": "^1.0.1",
+    "bcrypt": "^6.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -34,6 +35,7 @@
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^10.4.20",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
